--- a/index.html
+++ b/index.html
@@ -528,26 +528,26 @@
                             <div class="col-md-4">
                                 <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-life-ring"
                                         aria-hidden="true"></i>
-                                    <h5>Support</h5>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt inventore suscipit
-                                        porro dolore veritatis impedit alias</p>
+                                    <h5>Our Mission</h5>
+                                    <p>To design teaching solutions that inspire, captivate, and make an impact. We believe that every project is an opportunity to create something unique, something that tells a story, and something that resonates with your audience.</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="icon-box wow fadeInUp" data-wow-delay="0.4s"> <i class="fa fa-mobile"
                                         aria-hidden="true"></i>
-                                    <h5>Cross Platform</h5>
-                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius nobis eum autem,
-                                        corrupti accusantium neque debitis totam minus consectetur volupta</p>
+                                    <h5>Our Expertise</h5>
+                                    <p>
+                                        Our talented team of designers, artists, and visionaries thrive on challenges. From branding and web design to marketing collateral and beyond, we've got you covered. We craft designs that not only look good but also function flawlessly
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="icon-box wow fadeInUp" data-wow-delay="0.6s"> <i class="fa fa-bolt"
                                         aria-hidden="true"></i>
-                                    <h5>Fast</h5>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis iste voluptates
-                                        ducimus quod quisquam aperiam voluptate quas eveniet a necessitatibus dolorem
-                                        nisi minima vitae soluta modi, ad iure sed non!</p>
+                                    <h5>Our Approach</h5>
+                                    <p>
+                                        We approach each project with a blend of creativity and strategy. Understanding your goals and your audience is at the core of our design process. We aim to not just meet but exceed your expectations.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -565,8 +565,9 @@
                     <div class="sectioner-header text-center">
                         <h3>category</h3>
                         <span class="line"></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit a error cumque quibusdam
-                            quos accusantium ut possimus asperiores sapiente quia suscipit pers</p>
+                        <p>
+                            Nurture your creativity with our creative arts and design courses. Whether you're an aspiring artist, graphic designer, or filmmaker, we have the tools to fuel your passion.
+                        </p>
                     </div>
                     <div class="section-content text-center">
                         <div class="row">
