--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12 text-center"><a class="btn_visit_w"
-                                                    href="https://www.jeeviacademy.com/course-lists/">Visit Website</a></div>
+                                                    href="https://gitlab.com/pages">Visit Website</a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -623,7 +623,7 @@
 
                                     <div class="card_body">
                                         <div class="card_body_each">
-                                            <div class="card_body_each_a"><a href="https://www.jeeviacademy.com/course-lists/"><span>UX
+                                            <div class="card_body_each_a"><a href="https://gitlab.com/pages"><span>UX
                                                         design</span></a>
                                             </div>
                                         </div>
@@ -675,7 +675,7 @@
 
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12 text-center"><a class="btn_visit_w"
-                                                    href="https://www.uplabs.com/">Visit Website</a></div>
+                                                    href="https://render.com">Visit Website</a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -695,7 +695,7 @@
 
                                     <div class="card_body">
                                         <div class="card_body_each">
-                                            <div class="card_body_each_a"><a href="https://www.jeeviacademy.com/course-lists/"><span>Ui and
+                                            <div class="card_body_each_a"><a href="https://gitlab.com/pages"><span>Ui and
                                                         UX advanced course</span></a>
                                             </div>
                                         </div>
@@ -709,7 +709,7 @@
 
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12 text-center"><a class="btn_visit_w"
-                                                    href="https://www.uplabs.com/">Visit Website</a></div>
+                                                 href="https://gitlab.com/pages">Visit Website</a></div>
                                         </div>
                                     </div>
                                 </div>
