--- a/index.html
+++ b/index.html
@@ -612,8 +612,9 @@
 
                             <div class="col-md-4 d-none d-md-block d-lg-block">
                                 <div class="feature-mobile"> <img src="./images/mob_mob.png"
-                                        class="img-fluid wow fadeInUp" /> </div>
+                                        class="img-fluid wow fadeInUp"/> </div>
                             </div>
+
                             <div class="col-sx-3 col-sm-4 col-md-4 wow fadeInUp" data-wow-delay="0.4s">
                                 <div class="card col-md-12">
                                     <a href="https://www.jeeviacademy.com/course-lists/">
@@ -686,6 +687,7 @@
                                 <div class="feature-mobile"> <img src="./images/mob_mob.png"
                                         class="img-fluid wow fadeInUp" /> </div>
                             </div>
+                            
                             <div class="col-sx-3 col-sm-4 col-md-4 wow fadeInUp" data-wow-delay="0.4s">
                                 <div class="card col-md-12">
                                     <a href="https://www.uplabs.com/">
@@ -744,8 +746,8 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-lg-8">
                                 <img src="./images/contatus_pg.png" alt="">
-
                             </div>
+
                             <div class="col-sm-12 col-md-12 col-lg-4">
                                 <div class="contact-info white">
                                     <div class="contact-item media"> <i
@@ -788,7 +790,7 @@
     </section>
 
 
-    <section class="download section-padding">
+    <!-- <section class="download section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -830,7 +832,7 @@
              
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <footer class="footer-copy">
